--- a/css/custom.css
+++ b/css/custom.css
@@ -167,8 +167,10 @@ section:nth-of-type(4n+8) {
 }
 
 #details .itinerary > div {
-  padding: 1rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   padding-left: 0;
+  padding-right: 2rem;
 }
 
 #details .date {
@@ -177,6 +179,19 @@ section:nth-of-type(4n+8) {
   text-transform: uppercase;
   margin-bottom: 10px;
   color: #05C6B4;
+}
+
+#guest-list .participants {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+#guest-list .participants .logo img {
+  filter: grayscale(1);
+  width: 80px;
+  margin: 10px;
 }
 
 #faq .faq-container {
